# ffmpegSample

./: CMakeLists.txt  CMakeLists_backup.txt  README.md
include/libavutil/: ffversion.h
lib/: libavcodec.59.dylib  libavdevice.59.8.101.dylib  libavdevice.dylib  libavfilter.8.dylib  libavformat.59.34.102.dylib  libavformat.dylib  libavutil.57.43.100.dylib  libavutil.dylib  libswresample.4.9.100.dylib  libswresample.4.dylib  libswscale.6.8.112.dylib  libswscale.6.dylib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
main.dSYM/Contents/Resources/DWARF/: main
src/: audio_record.cpp  audio_resample.cpp  log.cpp  main.cpp
src/include/: audio_record.hpp  audio_resample.hpp  log.hpp
